--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,12 @@ version: '3'
 
 services:
   webgoat:
-    image: webgoat/webgoat-8.0
+    image: webgoat-8.0:1.0.0
+    container_name: webgoat
     environment:
-      - WEBWOLF_HOST=webwolf
+      - WEBWOLF_HOST=10.138.0.2
       - WEBWOLF_PORT=9090
-      - TZ=Europe/Amsterdam
+      - TZ=America/Fortaleza
     ports:
       - "8080:8080"
       - "9001:9001"
@@ -14,9 +15,10 @@ services:
       - .:/home/webgoat/.webgoat
     working_dir: /home/webgoat
   webwolf:
-    image: webgoat/webwolf
+    image: webwolf-8.0:1.0.0
+    container_name: webwolf
     ports:
       - "9090:9090"
-    command: --spring.datasource.url=jdbc:hsqldb:hsql://webgoat:9001/webgoat --server.address=0.0.0.0
+    command: --spring.datasource.url=jdbc:hsqldb:hsql://10.138.0.2:9001/webgoat --server.address=0.0.0.0
     depends_on:
             - webgoat
